kuard-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-config
spec:
  volumes:
    - name: config-volume
      configMap:
        name: my-config
  containers:
    - name: test-container
      image: artpropp/kuard-aarch64:green
      imagePullPolicy: Always
      command:
        - /kuard
        - $(EXTRA_PARAM)
      volumeMounts:
        - mountPath: /config
          name: config-volume
  restartPolicy: Never
