kuard-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-tls
spec:
  containers:
    - name: kuard-tls
      image: artpropp/kuard-aarch64:green
      imagePullPolicy: Always
      volumeMounts:
        - name: tls-certs
          mountPath: /tls
          readOnly: true
  volumes:
    - name: tls-certs
      secret:
        secretName: kuard-tls
