host-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
    - host: alpaca.example.com
      http:
        paths:
          - backend:
              serviceName: alpaca-prod
              servicePort: 8080
    - host: bandicoot.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: bandicoot-prod
              servicePort: 8080
          - path: /a
            backend:
              serviceName: alpaca-prod
              servicePort: 8080
