whoami.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: whoami-service
            servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: whoami 
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: whoami-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: ctmagazin/whoami 
        name: whoami-container
        ports:
        - containerPort: 80
